--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -7,7 +7,9 @@
   min-height: $spacing-unit * 1.865;
 
   // Positioning context for the mobile navigation icon
-  position: relative;
+  position: fixed;
+  width: 100%;
+  background-color: whitesmoke;
 }
 
 .site-title {
