adding clean code

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,32 +3,13 @@ layout: default
 ---
 
 <div class="home">
+	<div class="video-container">
+  	<iframe width="568" height="318" src="//www.youtube.com/embed/Le8pTXQqM3s?rel=0" frameborder="0" allowfullscreen></iframe>
+  </div>
 	<h2>What is WebVR?</h2>
 	<p>WebVR is an open standard that makes it possible to experience VR in your browser. The goal is to make it easier for everyone to get into VR experiences, no matter what device you have.</p>
 	<h2>How do I experience WebVR?</h2>
 	<p>You need two things to experience WebVR: a headset and a compatible browser.</p>
 	<h2>What is A-frame?</h2>
 	<p>A web framework for building virtual reality experiences. Make WebVR with HTML and Entity-Component. Works on Vive, Rift, Daydream, GearVR, desktop.</p>
-
-	
-	<!--
-  <h1 class="page-heading">Posts</h1>
-  
-  {{ content }}
-
-  <ul class="post-list">
-    {% for post in site.posts %}
-      <li>
-        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-
-        <h2>
-          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
-      </li>
-    {% endfor %}
-  </ul>
-
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
--->
 </div>
