--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 	<div class="video-container">
-  	<iframe width="568" height="318" src="//www.youtube.com/embed/Le8pTXQqM3s?rel=0" frameborder="0" allowfullscreen></iframe>
+  	<iframe width="100%" height="318" src="//www.youtube.com/embed/Le8pTXQqM3s?rel=0" frameborder="0" allowfullscreen></iframe>
   </div>
 	<h2>What is WebVR?</h2>
 	<p>WebVR is an open standard that makes it possible to experience VR in your browser. The goal is to make it easier for everyone to get into VR experiences, no matter what device you have.</p>
